Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14696

read-only client mounts shouldn't allow quota changes

XMLWordPrintable

    • 3
    • 9223372036854775807

      Currently, read-only Lustre mount does not prevent quota changes from being made to it.

      # lfs quota -g abc123 .
      Disk quotas for grp abc123 (gid 6901):
       Filesystem kbytes quota limit grace files quota limit grace
       . 43634815148 177167400960 186025771008 - 106943 14641000 15373050 -
      # touch afile
      touch: cannot touch 'afile': Read-only file system
      # lfs setquota -g abc123 -I 15373999 .
      # lfs quota -g abc123 .
      Disk quotas for grp abc123 (gid 6901):
       Filesystem kbytes quota limit grace files quota limit grace
       . 43634815148 177167400960 186025771008 - 106943 14641000 15373999 -
      #
      

            hongchao.zhang Hongchao Zhang
            hongchao.zhang Hongchao Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: