lustre/tests/sanity-quota.sh
@@ -5061,6 +5061,15 @@ test_76() {
 }
 run_test 76 "project ID 4294967295 should be not allowed"
 
+test_77()
+{
+	mount_client $MOUNT2 "ro"
+	lfs setquota -u quota_usr -b 100M -B 100M -i 10K -I 10K $MOUNT2 &&
+		error "lfs setquota should fail in read-only Lustre mount"
+	umount $MOUNT2
+}
+run_test 77 "lfs setquota should fail in Lustre mount with 'ro'"
+
 quota_fini()
 {
 	do_nodes $(comma_list $(nodes_list)) \
